# ReActify-Final-Group-Project-W2025

./: .gitignore  README.md
Mobile_App/: ReActify.sln
iot_subsystems/: .env.example  README.md  pyproject.toml
iot_subsystems/src/common/devices/: actuator.py  sensor.py
iot_subsystems/src/common/iot/: azure_device_client.py
iot_subsystems/src/earthquake_subsystem/: README.md  __main__.py  runner.py  system.py
iot_subsystems/src/earthquake_subsystem/devices/: led_stick.py  mock_led_stick.py  mock_pir_sensor.py  mock_sound_sensor.py  pir_sensor.py  sound_sensor.py
iot_subsystems/src/earthquake_subsystem/interfaces/: system_interface.py
iot_subsystems/src/earthquake_subsystem/iot/: azure_device_client.py
iot_subsystems/src/example_system/: runner.py
iot_subsystems/src/fire_air_quality_system/: README.md  __main__.py  requirements.txt  runner.py  system.py
iot_subsystems/src/fire_air_quality_system/devices/: CO2Sensor.py  RGBLedStick.py  examples.py  fan.py  mocks.py
iot_subsystems/src/fire_air_quality_system/interfaces/: __init__.py  system_interface.py
iot_subsystems/src/fire_air_quality_system/iot/: azure_device_client.py
iot_subsystems/src/water_floods_subsystem/: README.md  __main__.py  pyproject.toml  runner.py  servo_test.py
iot_subsystems/src/water_floods_subsystem/devices/: buzzer.py  servo_motor.py  soil_moisture.py  toggle_actuator.py  water_level.py
iot_subsystems/tests/example_system/: conftest.py
iot_subsystems/tests/fire_air_quality_system/: conftest.py
iot_subsystems/tests/water_floods_subsystem_tests/: conftest.py
(+65 files in other folders)
